[project]
name = "agent-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "chromadb>=1.0.21",
    "deepeval>=3.3.9",
    "ipykernel>=6.30.1",
    "llama-index>=0.14.0",
    "llama-index-core>=0.14.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-google-genai>=0.3.1",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-node-parser-docling>=0.4.1",
    "llama-index-readers-docling>=0.4.1",
    "llama-index-readers-file>=0.5.4",
    "llama-index-vector-stores-chroma>=0.5.3",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.4",
]
