[project]
name = "agent-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "agno>=2.0.7",
    "chromadb>=1.0.21",
    "datasets>=4.0.0",
    "deepeval>=3.3.9",
    "googlesearch-python>=1.3.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-core>=0.3.76",
    "langgraph>=0.6.7",
    "llama-index>=0.14.0",
    "llama-index-core>=0.14.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-google-genai>=0.3.1",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-node-parser-docling>=0.4.1",
    "llama-index-readers-docling>=0.4.1",
    "llama-index-readers-file>=0.5.4",
    "llama-index-vector-stores-chroma>=0.5.3",
    "mplfinance>=0.12.10b0",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.4",
    "rich>=14.1.0",
    "tavily-python>=0.7.12",
    "yfinance>=0.2.66",
]
